--- a/template.html
+++ b/template.html
@@ -1,14 +1,9 @@
-div style="width:800px; height:600px; padding:20px; text-align:center; border: 10px solid #787878">
-<div style="width:750px; height:550px; padding:20px; text-align:center; border: 5px solid #787878">
-       <span style="font-size:50px; font-weight:bold">Certificate of Completion</span>
-       <br><br>
-       <span style="font-size:25px"><i>This is to certify that</i></span>
-       <br><br>
-       <span style="font-size:30px"><b>{{ ph }}</b></span><br/><br/>
-       <span style="font-size:25px"><i>has completed the course</i></span> <br/><br/>
-       <span style="font-size:30px">{{ values2 }}</span> <br/><br/>
-       <span style="font-size:20px">with score of <b> {{ values3 }}</b></span> <br/><br/><br/><br/>
-       <span style="font-size:25px"><i>dated</i></span><br>
-      {{ date }}
+
+<p style="text-align: center;"><strong>Final Report</strong></p>
+<p style="text-align: center;"><br></p>
+<p>Total pH of the formulation: {{ ph }}</p>
+<p>Total temp: {{ values2 }}</p>
+<p><br></p>
+<p><br></p>
 </div>
 </div>
