--- a/template.html
+++ b/template.html
@@ -7,3 +7,20 @@
 <p><br></p>
 </div>
 </div>
+
+<p style="text-align: center;"><span style="color: rgb(226, 80, 65); font-size: 20px;">Thermal Assessment Report</span></p>
+<p style="text-align: left;">Conducted by: Paulo</p>
+<p style="text-align: left;">Date: {{ d }}</p>
+<p style="text-align: left;">______________________________________________________________________________________________________</p>
+<p style="text-align: left;">Project/Product: {{ title }}</p>
+<p style="text-align: left;"><br></p>
+<p style="text-align: left;">______________________________________________________________________________________________________ &nbsp;</p>
+<p style="text-align: left;"><br></p>
+<p style="text-align: left;"><u>Thermal Process:</u></p>
+<p style="text-align: left;">pH of product = {{ ph }}</p>
+<p style="text-align: left;">Heat Step temperature = {{ values2 }}</p>
+<p style="text-align: left;">Heat Step time = {{ values3 }}</p>
+<p style="text-align: left;">____________________________</p>
+<p style="text-align: left;">Minimum Treatment Time Recommended = {{ value }}</p>
+<p style="text-align: left;">Assessment Result = <span style="color: rgb(85, 57, 130); font-size: 19px;"><strong>meet</strong></span></p>
+<p style="text-align: left;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
