--- a/template.html
+++ b/template.html
@@ -21,6 +21,6 @@
 <p style="text-align: left;">Heat Step temperature = {{ values2 }}</p>
 <p style="text-align: left;">Heat Step time = {{ values3 }}</p>
 <p style="text-align: left;">____________________________</p>
-<p style="text-align: left;">Minimum Treatment Time Recommended = {{ value }}</p>
+<p style="text-align: left;">Minimum Treatment Time Recommended = {{ a }}</p>
 <p style="text-align: left;">Assessment Result = <span style="color: rgb(85, 57, 130); font-size: 19px;"><strong>meet</strong></span></p>
 <p style="text-align: left;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
