--- a/template.html
+++ b/template.html
@@ -12,7 +12,7 @@
 <p style="text-align: left;">Conducted by: Paulo</p>
 <p style="text-align: left;">Date: {{ d }}</p>
 <p style="text-align: left;">______________________________________________________________________________________________________</p>
-<p style="text-align: left;">Project/Product: {{ title }}</p>
+<p style="text-align: left;">Project/Product: {{ project }}</p>
 <p style="text-align: left;"><br></p>
 <p style="text-align: left;">______________________________________________________________________________________________________ &nbsp;</p>
 <p style="text-align: left;"><br></p>
