--- a/template.html
+++ b/template.html
@@ -13,5 +13,5 @@
 <p style="text-align: left;">Heat Step time = {{ values3 }}</p>
 <p style="text-align: left;">____________________________</p>
 <p style="text-align: left;">Minimum Treatment Time Recommended = {{ a }}</p>
-<p style="text-align: left;">Assessment Result = <span style="color: rgb(85, 57, 130); font-size: 19px;"><strong>meet</strong></span></p>
+<p style="text-align: left;">Assessment Result = <span style="color: rgb(85, 57, 130); font-size: 19px;"><strong>{{ result }}</strong></span></p>
 <p style="text-align: left;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
