--- a/template.html
+++ b/template.html
@@ -15,3 +15,10 @@
 <p style="text-align: left;">Minimum Treatment Time Recommended = {{ a }}</p>
 <p style="text-align: left;">Assessment Result = <span style="color: rgb(85, 57, 130); font-size: 19px;"><strong>{{ result }}</strong></span></p>
 <p style="text-align: left;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
+<strong>_______________________</strong></span></p>
+<p style="text-align: left;"><u>Hot Fill:</u></p>
+<p style="text-align: left;">Hot Fill temperature = {{ hftemp }}</p>
+<p style="text-align: left;">Hot Fill time = {{ timehotfill }}</p>
+<p style="text-align: left;">Minimum Treatment Time Recommended = time2</p>
+<p style="text-align: left;">Assessment Result = <span style="color: rgb(85, 57, 130); font-size: 19px;"><strong>meet</strong></span></p>
+<p style="text-align: left;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
