--- a/template.html
+++ b/template.html
@@ -19,6 +19,6 @@
 <p style="text-align: left;"><u>Hot Fill:</u></p>
 <p style="text-align: left;">Hot Fill temperature = {{ hftemp }}</p>
 <p style="text-align: left;">Hot Fill time = {{ timehotfill }}</p>
-<p style="text-align: left;">Minimum Treatment Time Recommended = time2</p>
+<p style="text-align: left;">Minimum Treatment Time Recommended = {{ time2 }}</p>
 <p style="text-align: left;">Assessment Result = <span style="color: rgb(85, 57, 130); font-size: 16px;"><strong>{{ result2 }}</strong></span></p>
 <p style="text-align: left;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
