--- a/template.html
+++ b/template.html
@@ -1,6 +1,6 @@
 
 <p style="text-align: center;"><span style="color: rgb(226, 80, 65); font-size: 16px;">Thermal Assessment Report</span></p>
-<p style="text-align: left;">Conducted by: Paulo</p>
+<p style="text-align: left;">Conducted by: {{ name }}</p>
 <p style="text-align: left;">Date: {{ d }}</p>
 <p style="text-align: left;">______________________________________________________________________________________________________</p>
 <p style="text-align: left;">Project/Product: {{ project }}</p>
